# NemoEvaluator

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
evaluate/: AnimCurve.cpp  AnimCurve.h  AnimSequence.cpp  AnimSequence.h  CMakeLists.txt  Context.cpp  Context.h  Evaluate.cpp  Evaluate.h  Runtime.cpp  Runtime.h  main.cpp
plugin_houdini/: CMakeLists.txt  SOP_Nemo.cpp  SOP_Nemo.h  SOP_NemoPlay.cpp  SOP_NemoPlay.h  initialize.cpp
